# QW3100_modbus

./: .env  .gitignore  CLAUDE.md  Makefile  Readme.md  main.c  main_test  meson.build  qw3100-config.json  sensor_trident_modbus  sensor_trident_modbus_ARM  setup_dependencies_Sensor_Trident.sh
cross/: armv7.ini
deploy/: qw3100-modbus.service
docs/: COMO_USAR_WIKI.md  Requisitos.md  Tareas_pendente.md  WIKI_ARQUITECTURA.md  WIKI_COMPILACION.md  WIKI_DEPENDENCIAS.md  WIKI_DEPLOYMENT.md  WIKI_FLUJO_DESARROLLO.md  WIKI_HOME.md  WIKI_SETUP.md  WIKI_TESTING.md  WIKI_TOOLS.md
docs/Analisis_datos/: Informe_analisis  Polling_lectura_Registro_sensor.txt  Polling_salida_binario_commit_9f0d32d27a1f1c736e47ecca6fc214e8598e19ff.txt
scripts/: build_third_party.sh  mock_server.py  setup_dependencies_Sensor_Trident.sh
src/: CLAUDE.md  circuit_breaker.c  circuit_breaker.h  config.c  config.h  http_sender.c  http_sender.h  logger.h  main.c  modbus_comm.c  modbus_comm.h  mqtt_sender.c  mqtt_sender.h  persist.c  persist.h  sensor.c  sensor.h
test/: main_test  main_test.c  main_test_JSON.c
tools/: CLAUDE.MD  payload.json  probe_env.c  probe_env_config.h
